--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         <div class="row">
             <img src="resources/img/logo-white.png" alt="logo" class="logo">
             <ul class="main-nav">
-                <li><a href="">Food delivery</a></li>
-                <li><a href="">How it works</a></li>
-                <li><a href="">Our cities</a></li>
-                <li><a href="">Sign up</a></li>
+                <li><a href="#">Food delivery</a></li>
+                <li><a href="#">How it works</a></li>
+                <li><a href="#">Our cities</a></li>
+                <li><a href="#">Sign up</a></li>
             </ul>
         </div>
     </nav>
     <div class="hero-text-box">
         <h1>Goodbye junk food. <br>Hello super healthy meals.</h1>
-        <a class="btn btn-full" href="">I’m hungry</a>
-        <a class="btn btn-ghost" href="">Show me more</a>
+        <a class="btn btn-full" href="#">I’m hungry</a>
+        <a class="btn btn-ghost" href="#">Show me more</a>
     </div>
 </header>
 <section class="section-features">
@@ -139,10 +139,82 @@
                 <div>3</div>
                 <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
             </div>
-            <a href="" class="btn-app"><img src="resources/img/download-app.svg" alt="App Store Button"></a>
-            <a href="" class="btn-app"><img src="resources/img/download-app-android.png" alt="Play Store Button"></a>
+            <a href="#" class="btn-app"><img src="resources/img/download-app.svg" alt="App Store Button"></a>
+            <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Play Store Button"></a>
         </div>
     </div>
+</section>
+<section class="section-cities">
+    <div class="row">
+        <h2>We're currently in these cities</h2>
+    </div>
+    <div class="row">
+        <div class="col span-1-of-4 box">
+            <img src="resources/img/lisbon-3.jpg" alt="lisbon">
+            <h3>Lisbon</h3>
+            <div class="city-feature">
+                <ion-icon class="icon-small" name="person"></ion-icon>
+                1600+ happy eaters
+            </div>
+            <div class="city-feature">
+                <ion-icon class="icon-small" name="star"></ion-icon>
+                60+ top chefs
+            </div>
+            <div class="city-feature">
+                <ion-icon class="icon-small" name="logo-twitter"></ion-icon>
+                <a href="#">@omnifood_lx</a>
+            </div>
+        </div>
+        <div class="col span-1-of-4 box">
+            <img src="resources/img/san-francisco.jpg" alt="san francisco">
+            <h3>San Francisco</h3>
+            <div class="city-feature">
+                <ion-icon class="icon-small" name="person"></ion-icon>
+                3700+ happy eaters
+            </div>
+            <div class="city-feature">
+                <ion-icon class="icon-small" name="star"></ion-icon>
+                160+ top chefs
+            </div>
+            <div class="city-feature">
+                <ion-icon class="icon-small" name="logo-twitter"></ion-icon>
+                <a href="#">@omnifood_sf</a>
+            </div>
+        </div>
+        <div class="col span-1-of-4 box">
+            <img src="resources/img/berlin.jpg" alt="berlin">
+            <h3>Berlin</h3>
+            <div class="city-feature">
+                <ion-icon class="icon-small" name="person"></ion-icon>
+                2300+ happy eaters
+            </div>
+            <div class="city-feature">
+                <ion-icon class="icon-small" name="star"></ion-icon>
+                110+ top chefs
+            </div>
+            <div class="city-feature">
+                <ion-icon class="icon-small" name="logo-twitter"></ion-icon>
+                <a href="#">@omnifood_berlin</a>
+            </div>
+        </div>
+        <div class="col span-1-of-4 box">
+            <img src="resources/img/london.jpg" alt="london">
+            <h3>London</h3>
+            <div class="city-feature">
+                <ion-icon class="icon-small" name="person"></ion-icon>
+                1200+ happy eaters
+            </div>
+            <div class="city-feature">
+                <ion-icon class="icon-small" name="star"></ion-icon>
+                50+ top chefs
+            </div>
+            <div class="city-feature">
+                <ion-icon class="icon-small" name="logo-twitter"></ion-icon>
+                <a href="#">@omnifood_london</a>
+            </div>
+        </div>
+    </div>
+
 </section>
 <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
