--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
     <div class="row">
         <div class="col span-1-of-3">
             <blockquote>
-                Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+                Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so
+                Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
             </blockquote>
             <cite>
                 <img src="resources/img/customer-1.jpg" alt="Customer 1">
@@ -233,7 +234,8 @@
         </div>
         <div class="col span-1-of-3">
             <blockquote>
-                Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
+                Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery
+                here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
             </blockquote>
             <cite>
                 <img src="resources/img/customer-2.jpg" alt="Customer 2">
@@ -242,7 +244,8 @@
         </div>
         <div class="col span-1-of-3">
             <blockquote>
-                I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+                I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and
+                ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
             </blockquote>
             <cite>
                 <img src="resources/img/customer-3.jpg" alt="Customer 3">
@@ -265,10 +268,22 @@
                 </div>
                 <div>
                     <ul>
-                        <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal every day</li>
-                        <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order 24/7</li>
-                        <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest creations</li>
-                        <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery</li>
+                        <li>
+                            <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>
+                            1 meal every day
+                        </li>
+                        <li>
+                            <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>
+                            Order 24/7
+                        </li>
+                        <li>
+                            <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>
+                            Access to newest creations
+                        </li>
+                        <li>
+                            <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>
+                            Free delivery
+                        </li>
                     </ul>
                 </div>
                 <div>
@@ -285,10 +300,22 @@
                 </div>
                 <div>
                     <ul>
-                        <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal 10 days/month</li>
-                        <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order 24/7</li>
-                        <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest creations</li>
-                        <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery</li>
+                        <li>
+                            <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>
+                            1 meal 10 days/month
+                        </li>
+                        <li>
+                            <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>
+                            Order 24/7
+                        </li>
+                        <li>
+                            <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>
+                            Access to newest creations
+                        </li>
+                        <li>
+                            <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>
+                            Free delivery
+                        </li>
                     </ul>
                 </div>
                 <div>
@@ -305,10 +332,21 @@
                 </div>
                 <div>
                     <ul>
-                        <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal</li>
-                        <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order from 8 am to 12 pm</li>
-                        <li><ion-icon name="close-outline" class="icon-small"></ion-icon></li>
-                        <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery</li>
+                        <li>
+                            <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>
+                            1 meal
+                        </li>
+                        <li>
+                            <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>
+                            Order from 8 am to 12 pm
+                        </li>
+                        <li>
+                            <ion-icon name="close-outline" class="icon-small"></ion-icon>
+                        </li>
+                        <li>
+                            <ion-icon name="checkmark-outline" class="icon-small"></ion-icon>
+                            Free delivery
+                        </li>
                     </ul>
                 </div>
                 <div>
@@ -381,6 +419,31 @@
         </form>
     </div>
 </section>
+
+<footer>
+    <div class="row">
+        <div class="col span-1-of-2">
+            <ul class="footer-nav">
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">iOS App</a></li>
+                <li><a href="#">Android App</a></li>
+            </ul>
+        </div>
+        <div class="col span-1-of-2">
+            <ul class="social-links">
+                <li><a href="#"><ion-icon name="logo-facebook" class="facebook"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="logo-twitter" class="twitter"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="logo-google" class="google"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="logo-instagram" class="instagram"></ion-icon></a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <p>Copyright &copy; 2020 by Omnifood. All rights reserved.</p>
+    </div>
+</footer>
 <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
 </html>
