--- a/index.html
+++ b/index.html
@@ -6,31 +6,34 @@
     <title>Omnifood</title>
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <header>
     <nav>
         <div class="row">
             <img src="resources/img/logo-white.png" alt="logo" class="logo">
-            <ul class="main-nav">
-                <li><a href="#">Food delivery</a></li>
-                <li><a href="#">How it works</a></li>
-                <li><a href="#">Our cities</a></li>
-                <li><a href="#">Sign up</a></li>
+            <img src="resources/img/logo.png" alt="logo" class="logo-black">
+            <ul class="main-nav js--main-nav">
+                <li><a href="#features">Food delivery</a></li>
+                <li><a href="#work">How it works</a></li>
+                <li><a href="#cities">Our cities</a></li>
+                <li><a href="#plan">Sign up</a></li>
             </ul>
+            <a class="mobile-nav-icon menu js--nav-icon"><ion-icon name="menu"></ion-icon></a>
         </div>
     </nav>
     <div class="hero-text-box">
         <h1>Goodbye junk food. <br>Hello super healthy meals.</h1>
-        <a class="btn btn-full" href="#">I’m hungry</a>
-        <a class="btn btn-ghost" href="#">Show me more</a>
+        <a class="btn btn-full js--scroll-to-plan" href="#">I’m hungry</a>
+        <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more</a>
     </div>
 </header>
-<section class="section-features">
+<section class="section-features js--section-features" id="features">
     <div class="row">
         <h2>Get food fast &mdash; not fast food.</h2>
         <p class="long-copy">
@@ -38,7 +41,7 @@
             cooking. So let us take care of that, we’re really good at it, we promise!
         </p>
     </div>
-    <div class="row">
+    <div class="row js--wp-1">
         <div class="col span-1-of-4 box">
             <ion-icon name="infinite-outline" class="icon-big"></ion-icon>
             <h3>Up to 365 days/year</h3>
@@ -121,13 +124,13 @@
     </ul>
 </section>
 
-<section class="section-steps">
+<section class="section-steps" id="work">
     <div class="row">
         <h2>How it works &mdash; Simple as 1, 2, 3</h2>
     </div>
     <div class="row">
         <div class="col span-1-of-2 step-box">
-            <img class="app-screen" src="resources/img/app-iPhone.png" alt="Omnifood iPhone App">
+            <img class="app-screen js--wp-2" src="resources/img/app-iPhone.png" alt="Omnifood iPhone App">
         </div>
         <div class="col span-1-of-2 step-box">
             <div class="work-step">
@@ -147,11 +150,12 @@
         </div>
     </div>
 </section>
-<section class="section-cities">
+
+<section class="section-cities" id="cities">
     <div class="row">
         <h2>We're currently in these cities</h2>
     </div>
-    <div class="row">
+    <div class="row js--wp-3">
         <div class="col span-1-of-4 box">
             <img src="resources/img/lisbon-3.jpg" alt="lisbon">
             <h3>Lisbon</h3>
@@ -256,13 +260,14 @@
         </div>
     </div>
 </section>
-<section class="section-plans">
+
+<section class="section-plans js--section-plans" id="plan">
     <div class="row">
         <h2>Start eating healthy today</h2>
     </div>
     <div class="row">
         <div class="col span-1-of-3">
-            <div class="plan-box">
+            <div class="plan-box js--wp-4">
                 <div>
                     <h3>Premium</h3>
                     <p class="plan-price">399$ <span>/ month</span></p>
@@ -446,6 +451,9 @@
         <p>Copyright &copy; 2020 by Omnifood. All rights reserved.</p>
     </div>
 </footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="vendors/js/jquery.waypoints.min.js"></script>
 <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+<script src="resources/js/script.js"></script>
 </body>
 </html>
