--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initital-scale=1.0">
     <title>Omnifood</title>
+    <meta name="description" content="Omnifood is a premium food delivery service with the mission to bring health & affordable food to as many people as possible.">
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
@@ -377,7 +378,7 @@
         <h2>We're happy to hear from you</h2>
     </div>
     <div class="row">
-        <form action="#" method="post" class="contact-form">
+        <form action="resources/mailer.php" method="post" class="contact-form">
             <div class="row">
                 <div class="col span-1-of-3">
                     <label for="name">Name</label>
